Refactor: Refactor item routes into item package
- Refactor item route handlers into a separate item package for better organization
- Update sqlc config to include json tags
- Add sell item endpoint
- Update swagger docs to reflect api changes
- Change logger name to `lg` for consistency
