# internal/api/item/item.go
@@ -1,28 +1,28 @@
-package api
+package item
 
 import (
-	"encoding/json"
 	"fmt"
-	"io"
 	"net/http"
-	"strconv"
+	"time"
 
+	"github.com/dooleyonline/backend/internal/api/shared"
 	"github.com/dooleyonline/backend/sql"
+	"github.com/jackc/pgx/v5/pgtype"
 	"github.com/labstack/echo/v4"
 )
 
-// getAllItems godoc
+// GetAll godoc
 //
 //	@Summary	Get all items
 //	@Tags		item
 //	@Produce	json
 //	@Success	200	{array}	sql.Item
 //	@Router		/item [get]
-func getAllItems(c echo.Context) error {
+func GetAll(c echo.Context) error {
 	var (
 		req = c.Request()
 		ctx = req.Context()
-		db  = c.(customContext).db
+		db  = c.(shared.Context).DB
 	)
 	defer req.Body.Close()
 
@@ -34,7 +34,7 @@ func getAllItems(c echo.Context) error {
 	return c.JSON(http.StatusOK, items)
 }
 
-// getItem godoc
+// Get godoc
 //
 //	@Summary	Get item by ID
 //	@Tags		item
@@ -42,18 +42,17 @@ func getAllItems(c echo.Context) error {
 //	@Param		id	path		int	true	"Item ID"
 //	@Success	200	{object}	sql.Item
 //	@Router		/item/{id} [get]
-func getItem(c echo.Context) error {
+func Get(c echo.Context) error {
 	var (
 		req = c.Request()
 		ctx = req.Context()
-		db  = c.(customContext).db
+		db  = c.(shared.Context).DB
 	)
 	defer req.Body.Close()
 
-	idParam := c.Param("id")
-	id, err := strconv.ParseInt(idParam, 10, 64)
-	if err != nil {
-		return fmt.Errorf("failed to parse id: %w", err)
+	var id int64
+	if err := echo.PathParamsBinder(c).Int64("id", &id).BindError(); err != nil {
+		return fmt.Errorf("failed to bind id: %w", err)
 	}
 
 	item, err := db.GetItem(ctx, id)
@@ -64,7 +63,7 @@ func getItem(c echo.Context) error {
 	return c.JSON(http.StatusOK, item)
 }
 
-// createItem godoc
+// Create godoc
 //
 //	@Summary	Create item
 //	@Tags		item
@@ -73,23 +72,17 @@ func getItem(c echo.Context) error {
 //	@Param		item	body		sql.CreateItemParams	true	"Item"
 //	@Success	200		{object}	sql.Item
 //	@Router		/item [post]
-func createItem(c echo.Context) error {
+func Create(c echo.Context) error {
 	var (
 		req = c.Request()
 		ctx = req.Context()
-		db  = c.(customContext).db
+		db  = c.(shared.Context).DB
 	)
 	defer req.Body.Close()
 
-	body, err := io.ReadAll(req.Body)
-	if err != nil {
-		return fmt.Errorf("failed to read request body: %w", err)
-	}
-
-	params := sql.CreateItemParams{}
-
-	if err := json.Unmarshal(body, &params); err != nil {
-		return fmt.Errorf("failed to unmarshal body: %w", err)
+	var params sql.CreateItemParams
+	if err := c.Bind(&params); err != nil {
+		return fmt.Errorf("failed to bind params: %w", err)
 	}
 
 	item, err := db.CreateItem(ctx, params)
@@ -100,7 +93,7 @@ func createItem(c echo.Context) error {
 	return c.JSON(http.StatusOK, item)
 }
 
-// updateItem godoc
+// Update godoc
 //
 //	@Summary	Update item by ID
 //	@Tags		item
@@ -110,23 +103,20 @@ func createItem(c echo.Context) error {
 //	@Param		item	body		sql.UpdateItemParams	true	"Item"
 //	@Success	200		{object}	sql.Item
 //	@Router		/item/{id} [put]
-func updateItem(c echo.Context) error {
+func Update(c echo.Context) error {
 	var (
 		req = c.Request()
 		ctx = req.Context()
-		db  = c.(customContext).db
+		db  = c.(shared.Context).DB
 	)
 	defer req.Body.Close()
 
-	body, err := io.ReadAll(req.Body)
-	if err != nil {
-		return fmt.Errorf("failed to read request body: %w", err)
+	var params sql.UpdateItemParams
+	if err := c.Bind(&params); err != nil {
+		return fmt.Errorf("failed to bind params: %w", err)
 	}
-
-	params := sql.UpdateItemParams{}
-
-	if err := json.Unmarshal(body, &params); err != nil {
-		return fmt.Errorf("failed to unmarshal body: %w", err)
+	if err := echo.PathParamsBinder(c).Int64("id", &params.ID).BindError(); err != nil {
+		return fmt.Errorf("failed to bind id: %w", err)
 	}
 
 	item, err := db.UpdateItem(ctx, params)
@@ -137,62 +127,89 @@ func updateItem(c echo.Context) error {
 	return c.JSON(http.StatusOK, item)
 }
 
-// incrementItemViews godoc
+// Sell godoc
 //
-//	@Summary	Increment item views by ID
+//	@Summary	Update sold_at property by ID
 //	@Tags		item
-//	@Produce	plain
 //	@Param		id	path		int		true	"Item ID"
 //	@Success	200	{string}	string	"Item ID"
-//	@Router		/item/{id}/views [post]
-func incrementItemViews(c echo.Context) error {
+//	@Router		/item/{id}/sell [post]
+func Sell(c echo.Context) error {
 	var (
 		req = c.Request()
 		ctx = req.Context()
-		db  = c.(customContext).db
+		db  = c.(shared.Context).DB
 	)
 	defer req.Body.Close()
 
-	idParam := c.Param("id")
-	id, err := strconv.ParseInt(idParam, 10, 64)
-	if err != nil {
-		return fmt.Errorf("failed to parse id: %w", err)
+	var params sql.SellItemParams
+	if err := echo.PathParamsBinder(c).Int64("id", &params.ID).BindError(); err != nil {
+		return fmt.Errorf("failed to bind id: %w", err)
+	}
+	params.SoldAt = pgtype.Timestamptz{
+		Time:  time.Now(),
+		Valid: true,
+	}
+
+	if err := db.SellItem(ctx, params); err != nil {
+		return fmt.Errorf("failed to update item: %w", err)
+	}
+
+	return c.NoContent(http.StatusOK)
+}
+
+// IncrementView godoc
+//
+//	@Summary	Increment item views by ID
+//	@Tags		item
+//	@Param		id	path		int		true	"Item ID"
+//	@Success	200	{string}	string	"Item ID"
+//	@Router		/item/{id}/view [post]
+func IncrementView(c echo.Context) error {
+	var (
+		req = c.Request()
+		ctx = req.Context()
+		db  = c.(shared.Context).DB
+	)
+	defer req.Body.Close()
+
+	var id int64
+	if err := echo.PathParamsBinder(c).Int64("id", &id).BindError(); err != nil {
+		return fmt.Errorf("failed to bind id: %w", err)
 	}
 
 	if err := db.IncrementItemView(ctx, id); err != nil {
 		return fmt.Errorf("failed to increment views: %w", err)
 	}
 
-	return c.String(http.StatusOK, idParam)
+	return c.NoContent(http.StatusOK)
 }
 
-// deleteItem godoc
+// Delete godoc
 //
 //	@Summary	Delete item by ID
 //	@Tags		item
-//	@Produce	plain
 //	@Param		id	path		int		true	"Item ID"
 //	@Success	200	{string}	string	"Item ID"
 //	@Router		/item/{id} [delete]
-func deleteItem(c echo.Context) error {
+func Delete(c echo.Context) error {
 	var (
 		req = c.Request()
 		ctx = req.Context()
-		db  = c.(customContext).db
+		db  = c.(shared.Context).DB
 	)
 	defer req.Body.Close()
 
-	idParam := c.Param("id")
-	id, err := strconv.ParseInt(idParam, 10, 64)
-	if err != nil {
-		return fmt.Errorf("failed to parse id: %w", err)
+	var id int64
+	if err := echo.PathParamsBinder(c).Int64("id", &id).BindError(); err != nil {
+		return fmt.Errorf("failed to bind id: %w", err)
 	}
 
 	if err := db.DeleteItem(ctx, id); err != nil {
 		return fmt.Errorf("failed to get item: %w", err)
 	}
 
-	return c.String(http.StatusOK, idParam)
+	return c.NoContent(http.StatusOK)
 }
 
 // TODO: searchItem
